<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menuItem_vendor_view_service_requests"
            android:icon="@drawable/ic_create_service_request_black_24dp"
            android:orderInCategory="100"
            android:title="@string/menu_item_vendor_bid_service_requests"
            app:showAsAction="never" />

        <item
            android:id="@+id/menuItem_vendor_manage_service_requests"
            android:icon="@drawable/ic_manage_service_request_24dp"
            android:orderInCategory="200"
            android:title="@string/menu_item_vendor_manage_service_requests" />

        <item
            android:id="@+id/menuItem_vendor_profile"
            android:icon="@drawable/ic_profile_black_24dp"
            android:orderInCategory="300"
            android:title="@string/menu_item_vendor_profile" />
    </group>


</menu>
