<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/regText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_assignment_black_24dp"
            android:drawableLeft="@drawable/ic_assignment_black_24dp"
            android:drawablePadding="5dp"
            android:text="Registration"
            android:textColor="@color/colorAccent"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ViewFlipper
            android:id="@+id/reg_flipper"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/layout_border"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/initialsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_contact_mail_black_24dp"
                    android:drawableLeft="@drawable/ic_contact_mail_black_24dp"
                    android:drawablePadding="5dp"
                    android:text="@string/regInitials"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/firstTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/edittext_firstName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/firstName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/lstTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/edittext_lastName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/lastName" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailtxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/edittext_email"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/phonetxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/edittext_phonenumber"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/phonenumber"
                        android:inputType="phone" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_next_init"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/colorAccent"
                        android:onClick="directView"
                        android:tag="initials"
                        android:text="Next"
                        android:textColor="@color/textSecondary" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/layout_border"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/credsText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:drawableStart="@drawable/ic_verified_user_black_24dp"
                    android:drawableLeft="@drawable/ic_verified_user_black_24dp"
                    android:drawablePadding="5dp"
                    android:text="@string/regCred"
                    android:textColor="@color/colorAccent"
                    android:textSize="25dp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/usrnameTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <EditText
                        android:id="@+id/edittext_username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:ems="10"
                        android:hint="@string/username" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    app:passwordToggleEnabled="true">

                    <EditText
                        android:id="@+id/edittext_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/cnfpasswordText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">


                    <EditText
                        android:id="@+id/edittext_cnf_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_back_cred"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginRight="100dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/colorAccent"
                        android:onClick="directView"
                        android:tag="back"
                        android:text="Back"
                        android:textColor="@color/textSecondary" />

                    <Button
                        android:id="@+id/button_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:layout_marginBottom="20dp"
                        android:background="@color/colorAccent"
                        android:text="Register"
                        android:textColor="@color/textSecondary" />
                </LinearLayout>

            </LinearLayout>
        </ViewFlipper>

        <TextView
            android:id="@+id/lnkLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:onClick="redirectLogin"
            android:text="Already Registered? Login here"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />
    </LinearLayout>
</ScrollView>